# gtk4cmark-rs

./: Cargo.toml  LICENSE  README.md
src/: ir.rs  lib.rs  util.rs
src/blocks/: code.rs  mod.rs  table.rs  text.rs  thematicbreak.rs
src/view/: imp.rs  mod.rs
