[package]
name = "gtk4cmark"
description = "A GTK4 widget for rendering CommonMark content."
license = "MIT"
homepage = "https://inpr.sn"
repository = "https://github.com/Inparsian/gtk4cmark"
readme = "README.md"
version = "0.0.1"
edition = "2024"

[dependencies]
gtk4 = "0.10.3"
markdown = "1.0.0"
relm4 = "0.10.0"
sourceview5 = "0.10.0"
