[package]
name = "gtk4cmark"
description = "A GTK4 widget for rendering CommonMark content."
license = "MIT"
homepage = "https://inpr.sn"
repository = "https://github.com/Inparsian/gtk4cmark-rs"
readme = "README.md"
version = "0.0.3"
edition = "2024"

[package.metadata.docs.rs]
all-features = true

[dependencies]
gtk4 = "0.10.3"
markdown = "1.0.0"
sourceview5 = "0.10.0"
